human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_35.wast
(assert_invalid
  (module (func $type-unary-num-vs-void-in-loop-after-unreachable
    (unreachable) (loop (drop (i32.eqz (nop))))
  ))
  "type mismatch"
)